# ai-knowledgebase

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
.claude/: launch.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth_schemas.py  confluence_schemas.py  extraction_schemas.py  schemas.py
apps/api/app/application/confluence/: dto.py  use_cases.py
apps/api/app/application/context_package/: generator.py  use_cases.py
apps/api/app/application/extraction/: compiler.py  exceptions.py  html.py  use_cases.py
apps/api/app/application/governance/: exceptions.py  use_cases.py
apps/api/app/application/knowledge_product/: dto.py  exceptions.py  use_cases.py
apps/api/app/core/: config.py  security.py  telemetry.py
apps/api/app/domain/agent_registry/: ports.py
apps/api/app/domain/confluence/: entities.py  events.py  ports.py  repository.py  value_objects.py
apps/api/app/domain/context_package/: ports.py
apps/api/app/domain/extraction/: entities.py  events.py  ports.py  repository.py  schema.py
apps/api/app/domain/governance/: entities.py  events.py  ports.py  repository.py  value_objects.py
apps/api/app/domain/knowledge_graph/: ports.py
apps/api/app/domain/knowledge_product/: entities.py  events.py  repository.py  value_objects.py
apps/api/app/domain/policy_studio/: ports.py
apps/api/app/domain/shared/: base.py  event_bus.py
apps/api/app/domain/skill_bundle/: ports.py
apps/api/tests/: fakes.py  test_knowledge_product_domain.py  test_registry_use_cases.py
(+60 files in other folders)
